# SOSAuto_FRONTEND/src/app/services/models/automobiliste-dto.ts
@@ -1,7 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
+import { DemandeDepannage } from '../models/demande-depannage';
 import { VehiculeDto } from '../models/vehicule-dto';
 export interface AutomobilisteDto {
+  demandeDepannage?: Array<DemandeDepannage>;
   email?: string;
   nom?: string;
   password?: string;
