# SOSAuto_FRONTEND/src/app/services/models/mecanicien-dto.ts
@@ -1,7 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface MecanicienDto {
+  disponible?: 'INDISPONIBLE' | 'DISPONIBLE';
   email?: string;
+  latitude?: number;
+  longitude?: number;
   nom?: string;
   password?: string;
   personneid?: number;
